<resources>
    <string name="app_name">COVID19-SafetyApp</string>

    <string name="MainTopMessage">Let us fight together with Coronavirus</string>

    <string name="MainStatsHeading">COVID-19 Cases in India</string>
    <string name="MainStatsTotalLabel">Total Cases</string>
    <string name="MainStatsActiveLabel">Active</string>
    <string name="MainStatsRecoveredLabel">Recovered</string>
    <string name="MainStatsDeceasedLabel">Deceased</string>
    <string name="MainStatsLastUpdatedLabel">Last Updated at</string>
    <string name="MainStatsBtnCheckStateStatus">Click here to Check State Wise Cases</string>

    <string name="ContactUsTopHeading">Fill the following form\n We Will Contact You very Soon</string>
    <string name="ContactUsName">Enter Your Name</string>
    <string name="ContactUsEmail">Enter Your Email Address</string>
    <string name="ContactUsNumber">Enter Your Contact Number</string>
    <string name="ContactUsAge">Enter Your Age</string>
    <string name="ContactUsData">Enter Your Query</string>
    <string name="ContactUsButtonSubmit">Submit Data</string>

    <string name="ButtonMainContactUs">Contact Us</string>

    <string name="MainCallHelplineLabel">Call Helpline Number</string>

    <string name="SymptomsHeading">Symptoms of Coronavirus</string>
    <string name="PreventionHeading">Preventive Measures to Follow</string>

    <string name="StateCasesTopHeading">COVID-19 State-Wise Cases</string>

    <string name="StateSelectorHeading">Select the State</string>
    <string name="StateListItemNameLabel">Name of State</string>
    <string name="StateListItemCapitalLabel">Capital</string>

    <string name="StateDataNameLabel">Name of State</string>
    <string name="StateDataCapitalLabel">Capital</string>
    <string name="StateDataTotalLabel">Total Cases</string>
    <string name="StateDataRecoveredLabel">Recovered Cases</string>
    <string name="StateDataDeceasedLabel">Deceased Cases</string>
    <string name="StateDataSourceLabel">Data Source</string>


</resources>
