<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryLight"
    tools:context=".ContactUs">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgContactUsReturn"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="2dp"
            android:layout_weight="1"
            android:clickable="true"
            app:srcCompat="@drawable/back_button" />

        <TextView
            android:id="@+id/tvContactUsTopHeading"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="2dp"
            android:layout_weight="4"
            android:fontFamily="@font/bubblegum_sans"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/ContactUsTopHeading"
            android:textSize="24sp" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="10dp"
        app:cardElevation="8dp"
        app:cardUseCompatPadding="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etContactName"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="3dp"
                android:layout_marginBottom="5dp"
                android:background="@color/colorPrimaryDark"
                android:ems="10"
                android:fontFamily="@font/cuprum"
                android:gravity="center_horizontal|center_vertical"
                android:hint="@string/ContactUsName"
                android:inputType="textPersonName"
                android:textColor="@color/colorTextIcons"
                android:textSize="21sp" />

            <EditText
                android:id="@+id/etContactEmail"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="3dp"
                android:layout_marginBottom="5dp"
                android:background="@color/colorPrimaryDark"
                android:ems="10"
                android:fontFamily="@font/cuprum"
                android:gravity="center_horizontal|center_vertical"
                android:hint="@string/ContactUsEmail"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorTextIcons"
                android:textSize="21sp" />

            <EditText
                android:id="@+id/etContactNumber"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="3dp"
                android:layout_marginBottom="5dp"
                android:background="@color/colorPrimaryDark"
                android:ems="10"
                android:fontFamily="@font/cuprum"
                android:gravity="center_horizontal|center_vertical"
                android:hint="@string/ContactUsNumber"
                android:inputType="phone"
                android:textColor="@color/colorTextIcons"
                android:textSize="21sp" />

            <EditText
                android:id="@+id/etContactAge"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="3dp"
                android:layout_marginBottom="5dp"
                android:background="@color/colorPrimaryDark"
                android:ems="10"
                android:fontFamily="@font/cuprum"
                android:gravity="center_horizontal|center_vertical"
                android:hint="@string/ContactUsAge"
                android:inputType="number"
                android:textColor="@color/colorTextIcons"
                android:textSize="21sp" />

            <EditText
                android:id="@+id/etContactData"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="3dp"
                android:layout_marginBottom="5dp"
                android:background="@color/colorPrimaryDark"
                android:ems="10"
                android:fontFamily="@font/cuprum"
                android:gravity="center_horizontal|center_vertical"
                android:hint="@string/ContactUsData"
                android:inputType="textMultiLine"
                android:textColor="@color/colorTextIcons"
                android:textSize="21sp" />

            <Button
                android:id="@+id/btnSubmitData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/colorAccent"
                android:fontFamily="@font/coiny"
                android:text="@string/ButtonMainContactUs"
                android:textColor="@color/colorTextIcons"
                android:textSize="18sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>