<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    android:orientation="vertical"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:scrollbarStyle="outsideInset"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvMainTopMessage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="0.5"
        android:fontFamily="@font/autour_one"
        android:gravity="center_horizontal"
        android:text="@string/MainTopMessage"
        android:textColor="@color/colorPrimaryText"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        app:srcCompat="@drawable/main_wall" />

    <fragment
        android:id="@+id/fragment"
        android:name="com.example.covid19_safetyapp.MainBlankFragment"
        android:layout_width="match_parent"
        android:layout_weight="6"
        android:layout_height="0dp"
        tools:layout="@layout/fragment_main_blank" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="2dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvCallHelplineLabel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="1dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="1dp"
            android:layout_weight="6"
            android:fontFamily="@font/amethysta"
            android:gravity="center_vertical|end"
            android:text="@string/MainCallHelplineLabel" />

        <ImageView
            android:id="@+id/imgCallHelpline"
            android:layout_width="0dp"
            android:layout_height="71dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:clickable="true"
            android:contentDescription="TODO"
            android:focusable="true"
            app:srcCompat="@drawable/call" />
    </LinearLayout>

    <Button
        android:id="@+id/btnContactUs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:background="@color/colorAccent"
        android:fontFamily="@font/coiny"
        android:text="@string/ButtonMainContactUs"
        android:textColor="@color/colorTextIcons"
        android:textSize="17sp" />

</LinearLayout>