<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryLight"
    android:orientation="vertical"
    tools:context=".StateDataDisplayer">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                card_view:cardBackgroundColor="@color/colorPrimary"
                card_view:cardElevation="10dp"
                card_view:cardUseCompatPadding="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="2dp"
                        card_view:cardBackgroundColor="@color/colorPrimaryDark"
                        card_view:cardElevation="10dp"
                        card_view:cardUseCompatPadding="false">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tvStateDataNameLabel"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_gravity="center_horizontal|center_vertical"
                                android:layout_margin="1dp"
                                android:layout_weight="1"
                                android:fontFamily="@font/carter_one"
                                android:gravity="center_horizontal"
                                android:text="@string/StateDataNameLabel"
                                android:textColor="@color/colorPrimaryText"
                                android:textSize="20sp" />

                            <TextView
                                android:id="@+id/tvStateDataName"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_gravity="center_horizontal|center_vertical"
                                android:layout_margin="1dp"
                                android:layout_weight="1"
                                android:fontFamily="@font/chango"
                                android:gravity="center_horizontal"
                                android:textColor="@color/colorTextIcons"
                                android:textSize="20sp" />
                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="2dp"
                        card_view:cardBackgroundColor="@color/colorPrimaryDark"
                        card_view:cardElevation="10dp"
                        card_view:cardUseCompatPadding="false">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tvStateDataCapitalLabel"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal|center_vertical"
                                android:layout_margin="1dp"
                                android:layout_weight="1"
                                android:fontFamily="@font/carter_one"
                                android:gravity="center_horizontal"
                                android:text="@string/StateDataCapitalLabel"
                                android:textColor="@color/colorPrimaryText"
                                android:textSize="20sp" />

                            <TextView
                                android:id="@+id/tvStateDataCapital"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal|center_vertical"
                                android:layout_margin="1dp"
                                android:layout_weight="1"
                                android:fontFamily="@font/chango"
                                android:gravity="center_horizontal"
                                android:textColor="@color/colorTextIcons"
                                android:textSize="20sp" />
                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="2dp"
                        card_view:cardBackgroundColor="@color/colorPrimaryDark"
                        card_view:cardElevation="10dp"
                        card_view:cardUseCompatPadding="false">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tvStateDataTotalLabel"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal|center_vertical"
                                android:layout_margin="1dp"
                                android:layout_weight="1"
                                android:fontFamily="@font/carter_one"
                                android:gravity="center_horizontal"
                                android:text="@string/StateDataTotalLabel"
                                android:textColor="@color/colorPrimaryText"
                                android:textSize="20sp" />

                            <TextView
                                android:id="@+id/tvStateDataTotal"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal|center_vertical"
                                android:layout_margin="1dp"
                                android:layout_weight="1"
                                android:fontFamily="@font/chango"
                                android:gravity="center_horizontal"
                                android:textColor="@color/colorTextIcons"
                                android:textSize="20sp" />
                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="2dp"
                        card_view:cardBackgroundColor="@color/colorPrimaryDark"
                        card_view:cardElevation="10dp"
                        card_view:cardUseCompatPadding="false">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tvStateDataRecoveredLabel"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal|center_vertical"
                                android:layout_margin="1dp"
                                android:layout_weight="1"
                                android:fontFamily="@font/carter_one"
                                android:gravity="center_horizontal"
                                android:text="@string/StateDataRecoveredLabel"
                                android:textColor="@color/colorPrimaryText"
                                android:textSize="20sp" />

                            <TextView
                                android:id="@+id/tvStateDataRecovered"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal|center_vertical"
                                android:layout_margin="1dp"
                                android:layout_weight="1"
                                android:fontFamily="@font/chango"
                                android:gravity="center_horizontal"
                                android:textColor="@color/colorTextIcons"
                                android:textSize="20sp" />
                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="2dp"
                        card_view:cardBackgroundColor="@color/colorPrimaryDark"
                        card_view:cardElevation="10dp"
                        card_view:cardUseCompatPadding="false">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tvStateDataDeceasedLabel"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal|center_vertical"
                                android:layout_margin="1dp"
                                android:layout_weight="1"
                                android:fontFamily="@font/carter_one"
                                android:gravity="center_horizontal"
                                android:text="@string/StateDataDeceasedLabel"
                                android:textColor="@color/colorPrimaryText"
                                android:textSize="20sp" />

                            <TextView
                                android:id="@+id/tvStateDataDeceased"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal|center_vertical"
                                android:layout_margin="1dp"
                                android:layout_weight="1"
                                android:fontFamily="@font/chango"
                                android:gravity="center_horizontal"
                                android:textColor="@color/colorTextIcons"
                                android:textSize="20sp" />
                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:id="@+id/tvStateDataSourceLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginRight="2dp"
                        android:fontFamily="@font/amethysta"
                        android:gravity="end"
                        android:text="@string/StateDataSourceLabel" />

                    <TextView
                        android:id="@+id/tvStateDataSource"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2dp"
                        android:layout_marginRight="2dp"
                        android:layout_marginBottom="1dp"
                        android:clickable="true"
                        android:fontFamily="@font/amethysta"
                        android:gravity="end" />

                </LinearLayout>


            </androidx.cardview.widget.CardView>


        </LinearLayout>
    </ScrollView>
</LinearLayout>